Updated disto_list edit page for complete functionality

--- a/public/css/jgreunion.css
+++ b/public/css/jgreunion.css
@@ -10,6 +10,11 @@ button:focus {
 button:hover {
 	cursor: pointer;
 }
+
+.hidden {
+	display: none;
+}
+
 div#allMembersPage::after {
 	content: "";
 	position: absolute;
