--- a/public/css/jgreunion.css
+++ b/public/css/jgreunion.css
@@ -15,6 +15,10 @@ button:hover {
 	display: none;
 }
 
+.modal-dialog {
+    max-width: 1000px; 
+}
+
 div#allMembersPage::after {
 	content: "";
 	position: absolute;
@@ -34,6 +38,11 @@ div#allMembersPage::after {
     margin-top: 50px;
     margin-bottom: 10px;
 }
+
+.reunionInformationHeader {
+    background: #974c39;
+}
+
 div#charlottePage::after {
 	content: "";
 	position: absolute;
@@ -173,6 +182,10 @@ hr {
 }
 #reunion_page {
 	background: linear-gradient(90deg, rgb(55, 55, 55),black 15%, black 85%, rgb(55, 55, 55));
+	background-attachment: fixed !important;
+    background-position: center center !important;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
 }
 #jgreunion_page {
   background: linear-gradient(rgb(0, 0, 0), rgb(0, 0, 0), white);
@@ -796,27 +809,13 @@ button#close_directions {
 	padding-bottom: 2%;
 }
 a#fb_link {
-    margin: 0% 0% 0% 0%;
-    text-decoration: none;
-    border-radius: 5px;
-    background-image: url("../images/facebook-icon.jpg");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    padding: 3% 0% 0% 0%;
-}
-a#fb_link button {
-    font-size: 150%;
-    display: inherit;
-    border: none;
-    padding: 0%;
-    color: black;
-    width: 100%;
-    font-weight: 600;
-    font-family: 'Josefin Slab', serif;
-    background-color: initial;
-    background-color: transparent;
-    text-align: -webkit-center;
-    text-align: center;
+	background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url('/images/facebook-icon.jpg');
+    background-size: 100% 100% !important;
+    background-repeat: no-repeat !important;
+    white-space: inherit;
+	border-radius: 0.3rem;
+	text-shadow: 3px -1px 7px #2d2d2d;
+	color: floralwhite;
 }
 .payment_option p {
     margin: 0;
@@ -926,72 +925,37 @@ span#registrationLink {
     cursor: pointer;
 }
 .activities_content {
-  min-width: 86%;
-  max-width: 45%;
-  margin: 1% 5%;
-  min-height: 200px;
-  opacity: 0.8;
+  min-height: 300px;
+  opacity: 0.9;
   font-size: 130%;
-  padding: 0% 2% 1%;
   border-radius: 10px;
-  position: relative;
+  background-size: 100% 100% !important;
+  background-repeat: no-repeat !important;
+  background-attachment: fixed;
+  background-position: center center;
+  color: white;
 }
 .activities_content:nth-of-type(1) {
-  background-image: url("../images/picnic_bgrd.jpg");
-  background-size: 100% 100%;
-  min-height: 300px;
-  background-repeat: no-repeat;
-  color: white;
+  background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)),url("../images/picnic_bgrd.jpg");
+}
+.activities_content:nth-of-type(2) {
+  background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url("../images/cookout.jpg");
+}
+.activities_content:nth-of-type(3) {
+    background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url("../images/banquet_hall.jpg");
+}
+.activities_content:nth-of-type(4) {
+  background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url("../images/goodby02.jpg");
+}
+.activities_content:nth-of-type(4) p {
+  padding: 0% 33%;
 }
 .activities_content ul {
     padding: 0% 31%;
     list-style: none;
 }
-.activities_content:nth-of-type(2) {
-  background-image: url("../images/cookout.jpg");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  color: white;
-  opacity: 0.9;
-}
-.activities_content:nth-of-type(2) p {
-  padding: 0%;
-}
-.activities_content:nth-of-type(2) dl {
-  padding: 0%;
-}
-.activities_content:nth-of-type(3) {
-    background-image: url("../images/banquet_hall.jpg");
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    color: white;
-}
-.activities_content:nth-of-type(3) P {
-  font-weight: 600;
-  margin-top: -1%;
-}
-.activities_content:nth-of-type(4) {
-  background-image: url("../images/goodby02.jpg");
-  background-repeat: no-repeat;
-  background-size: 25% 100%;
-  color: black;
-  height: 300px;
-  border: solid;
-}
-.activities_content:nth-of-type(4) p {
-  padding: 0% 33%;
-}
-.activities_content_bgrd_skirt {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.4);
-    border-radius: 10px;
-}
-.activities_content *:not(.activities_content_bgrd_skirt) {
-    position: relative;
+h2.activitiesEventLocation {
+    border-bottom: solid 1px;
 }
 #suggestions {
 	padding-bottom: 2%;
@@ -2133,7 +2097,7 @@ select#fancyCutOption,#additionalTeeOption {
     border-radius: 5px;
     border: inset 2px;
 }
-.attending_adult_row, .attending_youth_row, .attending_children_row, #attending_children_row_default, #attending_youth_row_default {
+#attending_children_row_default, #attending_youth_row_default, #attending_adult_row_default {
 	display:none;
 }
 .addtionalOptionsRow {
@@ -2173,31 +2137,18 @@ h3#registrationDueAlert {
 .costPP {
 	text-align: center;
 }
+
+p.emptyInfo {
+	font-size: 175%;
+}
+
 button#registrationFormBtn {
-    position: fixed;
-    top: 0%;
-    right: 1.3%;
-    min-height: 15%;
-    /* max-height: 20%; */
-    border-bottom-right-radius: 5px;
-    border-bottom-left-radius: 5px;
-    background-color: #A1927A;
-    color: white;
-    border: solid 2px white;
-    font-family: 'Josefin Slab', serif;
-    font-size: 120%;
-    width: 11%;
-    box-shadow: initial;
-    z-index: 2;
-    padding: 0;
+	white-space: inherit;
 }
 button#registrationFormBtn span {
     font-size: 100%;
     max-width: 100%;
     padding: 10px 10px;
-}
-span#registrationFormSpan,span#registeredUsersSpan {
-    border-bottom: solid white 2px;
 }
 button#registrationFormBtn span:hover {
     text-decoration: underline;
