--- a/public/css/jgreunion.css
+++ b/public/css/jgreunion.css
@@ -2317,6 +2317,7 @@ table#contact_information_table th {
 	a#fb_link {
 		margin: 0% 0% 0% 0%;
 		padding: 3% 0%;
+		border-radius: 0.5rem;
 	}
 	#contact_content {
 		margin: 0% 2%;
@@ -2463,14 +2464,13 @@ table#contact_information_table th {
 	ul#past_reunions {
 	  padding: 1% 3.2% 1%;
 	}
+	
 	#reunion_history_pic {
-	  height: 10em;
-	  width: 10em;
 	}
+	
 	div#reunion_history {
 	  padding: 1.5% 6% 1%;
 	  font-size: 120%;
-	  background: transparent;
 	}
 	#reunion_descent {
 	  font-size: 120%;
@@ -2512,10 +2512,7 @@ table#contact_information_table th {
 	  text-align: -webkit-center;
 	  text-align: center;
 	}
-	a#fb_link {
-	  width: 95%;
-	  margin: 3% 2.5% 1%;
-	}
+	
 	a#fb_link img {
 	  width: 150px;
 	}
