--- a/public/css/jgreunion.css
+++ b/public/css/jgreunion.css
@@ -39,6 +39,12 @@ div#allMembersPage::after {
     background: #974c39;
 }
 
+.bgrd-attr {
+	 background-repeat: no-repeat; 
+	 background-size: cover; 
+	 background-position: center center;
+}
+
 div#charlottePage::after {
 	content: "";
 	position: absolute;
@@ -147,6 +153,18 @@ h2.flashMessage {
     opacity: 1;
     padding: 30px;
 }
+
+#upcoming_btn, #past_btn {
+	padding: 5% 0%;
+	background: radial-gradient(green, green, darkgreen);
+	color: whitesmoke;
+}
+
+#upcoming_btn.noActive {
+	background: radial-gradient(red, red, darkred);
+	color: whitesmoke;
+}
+		
 p#successMessage {
     padding: 0% 11%;
     margin: 0% 0% 5%;
@@ -210,14 +228,9 @@ hr {
     background-size: cover !important;
 }
 #jgreunion_page {
-  background: linear-gradient(black, #00ff14, black);
-  min-height: 400px;
-  max-height: 475px;
-}
-
-.carousel-inner {
-    min-height: 400px;
-	max-height: 400px;
+  /* background: linear-gradient(black, #00ff14, black); */
+  /* min-height: 400px; */
+  /* max-height: 475px; */
 }
 
 #family_tree_pic {
@@ -1874,67 +1887,7 @@ input#submit_button {
   border: outset 3px burlywood;
   background-color: bisque;
 }
-/*div#jgreunion_past_future {
-  position: relative;
-  background-color: white;
-  padding: 3% 2% 2%;
-}
-#upcoming_btn, #past_btn {
-  width: 100%;
-  border-radius: 5px;
-  border: solid burlywood;
-  background-color: bisque;
-  text-decoration: none;
-  padding: 5% 0%;
-  font-size: 170%;
-  display: -webkit-inline-box;
-  display: inline-box;
-  color: black;
-  text-align: -webkit-center;
-  text-align: center;
-}
-#upcoming_btn:hover, #past_btn:hover {
-	background-color: rgb(255, 248, 240);
-}
-#past_btn:hover {
-	background-color: rgb(255, 248, 240);
-}
-button#past_btn {
-    text-align: center;
-    text-align: -webkit-center;
-}
-ul#jgreunion_past_future_list {
-  list-style: none;
-  padding: 0% 0%;
-  position: relative;
-}
-ul#jgreunion_past_future_list > li {
-  display: inline-block;
-  width: 40%;
-  margin: 0% 4%;
-  position: relative;
-}
-ul#past_reunions {
-  display: none;
-  position: absolute;
-  z-index: 2;
-  list-style: none;
-  background-color: bisque;
-  border-left: solid burlywood;
-  border-right: solid burlywood;
-  border-bottom: solid burlywood;
-  border-radius: 5px;
-  padding: 1% 14.5% 1%;
-  width: 70%;
-  text-align: -webkit-center;
-  text-align: center;
-}
-ul#past_reunions li {
-    font-size: 120%;
-}
-ul#past_reunions a {
-    color: blue;
-}*/
+
 div#reunion_history {
   background: linear-gradient(white, rgb(108, 159, 62), rgb(108, 159, 62), rgb(108, 159, 62), rgb(108, 159, 62), rgb(108, 159, 62), rgb(108, 159, 62), white);
   padding: 1.5% 15% 1% 1%;
@@ -2389,552 +2342,6 @@ table#contact_information_table th {
 @media only screen and (min-width:576px) {
 	.modal-dialog {
 		max-width: 500px;
-	}
-}
-
-/*Smartphones portrait*/
-@media only screen and (min-device-width:320px) and (max-device-width:768px) {
-	div#modal {
-		height: 80%;
-		width: 80%;
-		left: 10%;
-	}
-	#past_btn {
-		padding: 9% 0%;
-	}
-	input#submit_button {
-		width: 95%;
-	}
-	button#takeLater_btn, #no_music {
-	  right: 15%;
-	  bottom: 10%;
-	  width: 70%;
-	  padding: 3% 0%;
-	}
-	button#takeNow_btn, #yes_music {
-	  padding: 3% 0%;
-	  bottom: 23%;
-	  left: 15%;
-	  font-size: 150%;
-	  width: 70%;
-	}
-	div#navi {
-	  padding: 2% 5% 21%;
-	}
-	
-	.page_header:first-of-type {
-	  text-align: -webkit-center;
-	  text-align: center;
-	}
-	
-	.page_header:first-of-type h1 {
-	  font-size: 160%;
-	}
-	
-	#admin_login {
-	  padding: 2.1% 1%;
-	  width: 50%;
-	  right: 25%;
-	  bottom: 4%;
-	}
-	button#admin_login_btn {
-	  text-align: -webkit-center;
-	  text-align: center;
-	  width: 100%;
-	  padding: 4% 0%;
-	  font-size: 110%;
-	}
-	#admin_form {
-	  width: 50%;
-	  bottom: 4%;
-	  right: 25%;
-	  top: initial;
-	}
-	input[type="text"], input[type="password"] {
-	  width: 90%;
-	}
-	div.showing_image {
-	  width: 99%;
-	  margin: 0% 0.5%;
-	}
-	div#image_caption {
-	  top: 1%;
-	  left: 1%;
-	}
-	ul#jgreunion_past_future_list > li {
-	  width: 92%;
-	  margin: 3% 4%;
-	  position: relative;
-	}
-	ul#past_reunions {
-	  padding: 1% 3.2% 1%;
-	}
-	
-	#reunion_history_pic {
-	}
-	
-	div#reunion_history {
-	  padding: 1.5% 6% 1%;
-	  font-size: 120%;
-	}
-	#reunion_descent {
-	  font-size: 120%;
-	}
-	#family_tree_pic {
-	  display: none;
-	}
-	span#last_updated {
-	  display: none;
-	}
-	div#page_header {
-	  padding: 0% 1%;
-	  font-size: 150%;
-	}
-	#reunion_page {
-	  padding: 0 1%;
-	}
-	#form_information img {
-	  min-height: 400px;
-	  height: 400px;
-	}
-	#hotel_pic {
-	  height: 210px;
-	  width: 100%;
-	  margin-right: 3%;
-	}
-	.activities_content {
-	  min-height: 600px;
-	}
-	.activities_content:nth-of-type(4) {
-	  background-size: 100% 73%;
-	  background-position: center bottom;
-	}
-	#contact_content {
-	  padding: 1% 1%;
-	}
-	div#contact_content p {
-	  margin: 4px;
-	  text-align: -webkit-center;
-	  text-align: center;
-	}
-	
-	a#fb_link img {
-	  width: 150px;
-	}
-	#fbImage_text {
-	  right: 2%;
-	  top: 24%;
-	}
-	div#navi,#profilePage.container #navi {
-		padding: 10% 5%;
-	}
-	#coming_soon_message p {
-		left: 10%;
-		margin: 0%;
-		padding: 10% 0% 0%;
-		font-size: 150%;
-		width: 80%;
-		top: -50%;
-	}
-	.nextReunion {
-		padding: 15% 0% 0%;
-		top: -25%;
-	}
-	.slideShowImage {
-		min-height: 300px;
-		max-height: 300px;
-		border-radius: 10px;
-		box-shadow: 0px 0px 10px black;
-		max-width: 94%;
-		width: 94%;
-		margin: 0% 3%;
-	}
-	a.profileLink, a.homeLink {
-		font-size: 140%;
-		color: white;
-		text-decoration: none;
-	}
-	div#family_account {
-		max-width: 100%;
-		min-width: 50%;
-	}
-	div#registration_div_wrapper, div#login_div_wrapper {
-		position: relative;
-		padding: 3% 5%;
-		background: inherit;
-	}
-	div#registration_div, div#login_div {
-		margin: 0% 0% 20%;
-	}
-	h2#reg_form_header {
-		margin: 4% 10%;
-	}
-	div#reg_form_input, div#login_form_input {
-		margin: 0% 10% 0%;
-	}
-	div#reg_form_input input.regInput.regFNInput, div#reg_form_input input.regInput.regLNInput {
-		max-width: 47.75%;
-	}
-	input#reg_form_btn, #login_submit_btn {
-		min-width: 50%;
-		font-size: 105%;
-		padding: 1.5% 1%;
-	}
-	div.message {
-		position: absolute;
-		background-color: #02d002;
-		color: white;
-		opacity: 0.9;
-		max-width: 10%;
-		left: 20px;
-		top: 10px;
-		z-index: 1;
-		border-radius: 3px;
-		box-shadow: 0px 0px 10px darkgray;
-	}
-	div.message ul {
-		width: 90%;
-		max-width: 100%;
-		padding: 0% 0% 0% 10%;
-	}
-	div.errors {
-		position: absolute;
-		right: 20px;
-		top: 10px;
-		background-color: darkred;
-		color: wheat;
-		z-index: 1;
-		opacity: 0.9;
-		border-radius: 3px;
-		box-shadow: 0px 0px 10px darkgray;
-		max-width: 20%;
-	}
-	.errors ul {
-		padding: 0% 10% 0%;
-		max-width: 94%;
-	}
-	p.profileInfo {
-		margin: 0;
-		display: -webkit-inline-box;
-		display: inline-block;
-	}
-	div#profile_header, div.profile_info_div {
-		margin-left: 2%;
-	}
-	div.profile_info_div {
-		font-size: 115%;
-	}
-	div#profile_header {display: none;}
-	div#post_header_div {
-		padding-top: 3%;
-		padding-bottom: 2%;
-	}
-	h2.postHeader, div.indPost {
-		text-align: -webkit-left;
-		text-align: left;
-		padding: 1.5% 2%;
-		max-width: 100%;
-	}
-	.profilePhoto, .profileHeader {
-		float: left;
-	}
-	.profilePhoto{
-		margin: 0% 3% 0% 0%;
-	}
-	h3.profileHeaderName {
-		margin: 0.5% 0% 0%;
-	}
-	h3.profileHeaderName a {
-		text-decoration: underline;
-		color: #3ca4ff;
-	}
-	.postPhoto {
-		clear: both;
-		padding: 1% 0%;
-		max-width: 100%;
-	}
-	.postPhoto img {
-		max-width: 200px;
-		max-height: 200px;
-		float: left;
-		margin: 1% 0.5%;
-		border: solid 1.5px;
-		box-shadow: 0px 0px 10px;
-	}
-	.postComment {
-		clear: both;
-		padding: 2% 0% 1%;
-	}
-	div.postDate {
-		display: table;
-		width: 100%;
-	}
-	.sectionDiv {
-		padding: 0.3% 0%;
-	}
-	span {
-		min-width: 35%;
-		display: inline-block;
-		font-size: 130%;
-	}
-	h2#profile_header_name {
-		text-align: -webkit-left;
-		text-align: left;
-		margin-bottom: 0.5%;
-	}
-	div#profile_information input,div#profile_information select {
-		display: -webkit-inline-box;
-		display: inline-block;
-		width: 60%;
-		border: none;
-		font-size: 110%;
-		font-family: 'Josefin Slab', serif;
-	}
-	div#profile_information input.profileInputGreenBtn,
-	div#profile_information input.profileInputJacksonBtn,
-	div#profile_information input.profileInputBtn {
-		width: 25%;
-		padding: 1% 0%;
-		text-align: -webkit-center;
-		text-align: center;
-		background-color: darkgrey;
-		color: white;
-		border: solid 1px black;
-	}
-	input.profileInput.profileSiblingInput {
-		margin: 0% 0% 0% -1%;
-	}
-	input.profileInput.profileInputChildren {
-		margin: 0% 0% 0% -1%;
-	}
-	div#profile_information input#submit_profile_update {
-		position: absolute;
-		top: 2%;
-		right: 2%;
-		max-width: 30%;
-		border-radius: 10px;
-		padding: 2% 0%;
-		border: outset 2px #45955e;
-		box-shadow: 0.5px 0.5px 5px #1c1c1c;
-		font-size: 140%;
-	}
-	.postBtn {
-		position: absolute;
-		top: 3.5%;
-		right: 2%;
-		max-width: 12%;
-		min-width: 10%;
-		border-radius: 10px;
-		padding: 1% 0%;
-		font-size: 100%;
-		border: outset 2px #45955e;
-		box-shadow: 0.5px 0.5px 5px #1c1c1c;
-		text-align: -webkit-center;
-		text-align: center;
-		text-decoration: none;
-		color: black;
-		background-color: floralwhite;
-		font-family: 'Josefin Slab', serif;
-	}
-	.allPostBtn {
-		position: absolute;
-		top: 3.5%;
-		right: 13%;
-		max-width: 12%;
-		min-width: 10%;
-		border-radius: 10px;
-		padding: 1% 0%;
-		border: outset 2px #45955e;
-		box-shadow: 0.5px 0.5px 5px #1c1c1c;
-		text-align: -webkit-center;
-		text-align: center;
-		text-decoration: none;
-		color: black;
-		background-color: floralwhite;
-	}
-	.postDate .deletePost {
-		font-size: 90%;
-	}
-	.postDate .deletePost a {
-		text-decoration: none;
-		color: darkred;
-		text-shadow: 4px 5px darkgray;
-	}
-	span.inputTitle.descentTitle {
-		padding: 0% 0% 3%;
-	}
-	div.header_div h3 {
-		margin: 0px;
-		background-color: beige;
-		padding: 0.5% 0% 0% 0.5%;
-	}
-	div.header_div {
-		margin: 2.5% 0%;
-		position: relative;
-		font-size: 125%;
-	}
-	img.profilePicture {
-		max-width: 120px;
-		max-height: 120px;
-		height: 75px;
-		width: 75px;
-	}
-	div#profile_information input:focus, div#profile_information select:focus {
-		outline: none;
-	}
-	div#profile_information input.profileNameInput1 {
-		max-width: 30%;
-		margin: 0% 0% 0% -1%;
-	}
-	div#profile_information input.profileNameInput2 {
-		width: initial;
-		max-width: 25%;
-	}
-	input.profileInput.profileInputSpouse {
-		margin: 0% 0% 0% -1%;
-		max-width: 50%;
-	}
-	div#profile_information input.profileInputAddress {
-		width: 25%;
-		margin: 0% 0% 0% -0.8%;
-	}
-	div#profile_information input.profileInputCity {
-		width: 15%;
-	}
-	div#profile_information select.profileInputState {
-		max-width: 8%;
-	}
-	div#profile_information input.profileInputZip {
-		width: 10%;
-	}
-	div#profile_information input.profileInputPhone1,
-	div#profile_information input.profileInputPhone2,
-	div#profile_information input.profileInputPhone3 {
-		width: 10%;
-	}
-	input.profileInput.profileInputDOB {
-		margin: 0% 0% 0% -1%;
-	}
-	div#profile_information input.profileInputPhone3 {
-		width: initial !important;
-		max-width: 20%;
-	}
-	div#profile_information input.profileInputGreenBtn {
-		border-top-left-radius: 5px;
-		border-bottom-left-radius: 5px;
-		/* border-right: solid 0.5px black; */
-		margin: 0% 0% 0% -1%;
-	}
-	span.visibleHeaderSpan {
-		font-size: 80%;
-		min-width: initial;
-		position: absolute;
-		right: 5%;
-		top: 25%;
-	}
-	div#profile_information input.visibleCheckBox {
-		width: initial;
-		position: absolute;
-		right: 0px;
-		top: 15%;
-	}
-	.descentDiv {
-		display: inline;
-	}
-	div#profile_information input.profileInputJacksonBtn {
-		border-top-right-radius: 5px;
-		border-bottom-right-radius: 5px;
-		/* border-left: solid 0.5px black; */
-	}
-	div#profile_information input.profileInput.descentSelected {
-		background-color: darkgreen;
-	}
-	div#profile_information input.profileInputMother {
-		width: initial;
-		margin: 0% 0% 0% -1%;
-		max-width: 25%;
-	}
-	div#profile_information input.profileInputFather {
-		max-width: 25%;
-		margin-left: 5%;
-	}
-	span.separator {
-		min-width: 0%;
-		font-size: 100%;
-	}
-	span.phone_par_span {
-		min-width: 0%;
-		margin: 0% -0.4% 0% -2%;
-	}
-	div#family_account {
-		top: 10px;
-		right: 10px;
-		max-width: 100%;
-		min-width: 45%;
-		text-align: -webkit-right;
-		text-align: right;
-	}
-	div#home_link {
-		position: absolute;
-		top: 10px;
-		left: 10px;
-		max-width: 100%;
-		min-width: 15%;
-		text-align: -webkit-left;
-		text-align: left;
-	}
-	div#profile_information {
-		position: relative;
-		max-width: 100%;
-		width: inherit;
-		display: -webkit-inline-box;
-		display: inline-block;
-		float: none;
-		padding: 0% 2%;
-	}
-	div#post_information {
-		display: -webkit-inline-box;
-		display: inline-block;
-		max-width: 50%;
-		width: 50%;
-		float: none;
-		min-height: 890px;
-		max-height: 890px;
-		overflow: auto;
-		background-color: #dddddd;
-		position: relative;
-	}
-	.newPost {
-		padding: 2% 5%;
-	}
-	
-	div#profile_photo {
-		width: 58%;
-		position: relative;
-		display: table;
-		float: none;
-	}
-	
-	img#profile_photo {
-		position: relative;
-		max-width: 100%;
-		padding: 10% 3% 0%;
-		width: 200px;
-		height: 200px;
-	}
-	
-	input#change_img_btn {
-		width: 200px !important;
-		position: absolute;
-		bottom: 0%;
-		left: 0;
-		margin: 0% 0% 0% 3%;
-		padding: 2% 0%;
-		opacity: 0.85;
-		background-color: #62aa62;
-		border: none;
-		color: white;
-		font-size: 100%;
 	}
 }
 
