--- a/public/css/jgreunion.css
+++ b/public/css/jgreunion.css
@@ -130,6 +130,7 @@ padding: 0% 1.5% 0%;
 background: linear-gradient(rgb(66, 66, 66), rgb(66, 66, 66), rgb(66, 66, 66), #6C9F3E);
 position: relative;
 }
+
 div#errors_modal {
     position: absolute;
     top: 0.55%;
@@ -141,6 +142,7 @@ div#errors_modal {
     display: none;
     overflow: auto;
 }
+
 h2.flashMessage {
     position: absolute;
     z-index: 10;
@@ -152,6 +154,11 @@ h2.flashMessage {
     border-radius: 5px;
     opacity: 1;
     padding: 30px;
+}
+
+.activeReunionItem {
+	background: radial-gradient(cadetblue, cadetblue, #acc1c1);
+    color: whitesmoke;
 }
 
 #upcoming_btn, #past_btn {
@@ -640,35 +647,18 @@ input#change_img_btn {
     color: white;
     font-size: 100%;
 }
-a.profileLink, a.homeLink {
-    font-size: 150%;
-    color: white;
-    text-decoration: none;
-}
-a.profileLink:first-of-type {
-    border-right: solid 1.5px whitesmoke;
-}
-a.profileLink.adminLink {
-    border-right: solid 1.5px whitesmoke;
-}
+
+
 .indPost {
     border-bottom: solid 1px #c9c9c9;
 }
+
 .postDate .indPostDate {
     font-size: 90%;
     text-align: -webkit-right;
     text-align: right;
     float: right;
 }
-/*div#slideshow_overlay {
-  position: absolute;
-  left: 0;
-  top: 0;
-  background-color: gray;
-  width: 100%;
-  height: 100%;
-  opacity: 0.3;
-}*/
 
 div#registered_members_information ul ul {
     padding: 0px 15px;
@@ -2563,11 +2553,7 @@ table#contact_information_table th {
 		width: 100%;
 		margin: 0% 0%;
 	}
-	a.profileLink, a.homeLink {
-		font-size: 140%;
-		color: white;
-		text-decoration: none;
-	}
+
 	div#family_account {
 		max-width: 100%;
 		min-width: 50%;
