--- a/public/css/jgreunion.css
+++ b/public/css/jgreunion.css
@@ -15,6 +15,11 @@ button:hover {
 	display: none;
 }
 
+a.profileLink.nav-link {
+    color: white;
+    font-size: 130%;
+}
+
 div#allMembersPage::after {
 	content: "";
 	position: absolute;
