--- a/public/css/jgreunion.css
+++ b/public/css/jgreunion.css
@@ -1010,6 +1010,7 @@ span#registrationLink, a#registrationLink {
     color: #BD0000;
     cursor: pointer;
 }
+
 .activities_content {
 	min-height: 300px;
 	opacity: 0.9;
@@ -1021,47 +1022,47 @@ span#registrationLink, a#registrationLink {
 	background-position: center center !important;
 	color: white;
 }
+
 .activities_content:nth-of-type(1) {
   background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)),url("../images/picnic_bgrd.jpg");
 }
+
 .activities_content:nth-of-type(2) {
   background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url("../images/cookout.jpg");
 }
+
 .activities_content:nth-of-type(3) {
     background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url("../images/banquet_hall.jpg");
 }
 .activities_content:nth-of-type(4) {
   background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url("../images/goodby02.jpg");
 }
+
 .activities_content:nth-of-type(4) p {
   padding: 0% 33%;
 }
+
 .activities_content ul {
-    padding: 0% 31%;
+    padding: 0% 10%;
     list-style: none;
 }
+
 h2.activitiesEventLocation {
     border-bottom: solid 1px;
 }
-#suggestions {
-	padding-bottom: 2%;
-}
-#suggestions_content {
-  margin: 0% 2%;
-  opacity: 0.9;
-  border-radius: 10px;
-  padding: 2% 0%;
-  font-size: 125%;
-}
+
 #contact_information_header {
   color: dodgerblue;
 }
+
 #contact_content i  {
   color: dodgerblue;
 }
+
 #contact_information {
 	padding-bottom: 2%;
 }
+
 #contact_content {
 	margin: 0% 2%;
 	padding: 1% 10%;
@@ -1888,13 +1889,15 @@ div#reunion_history {
   color: white;
   font-size: 110%;
 }
+
 #reunion_history_pic {
   float: left;
-  height: 12em;
+  padding-top: 3rem;
   width: 17em;
   margin-right: 3%;
   margin-bottom: 1%;
 }
+
 img#paypal_icon {
   position: absolute;
   top: 0%;
@@ -1903,11 +1906,13 @@ img#paypal_icon {
   border-radius: 10px;
   padding-left: 3%;
 }
+
 span#paypal_email {
   display: block;
   text-align: center;
   color: green;
 }
+
 #fbImage_text {
   position: absolute;
   right: 10%;
@@ -1920,9 +1925,6 @@ span#paypal_email {
 }
 div#reunion_descent p:last-of-type {
     margin-bottom: 0;
-}
-
-#jackson_descent, #green_descent {
 }
 
 #survey_div h1{
@@ -2167,6 +2169,29 @@ table#contact_information_table th {
 	.activities_content ul {
 		padding: 0%;
 	}
+		
+	.activities_content:nth-of-type(2) {
+		background: initial !important;
+		background-size: initial !important;
+		background-attachment: initial !important;
+		background-position: initial !important;
+		background-repeat: initial !important;
+	}
+	
+	.activities_content:nth-of-type(2)::after {
+		content: "";
+		position: absolute;
+		background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url("../images/cookout.jpg");
+		background-size: cover;
+		background-attachment: fixed;
+		background-position: center center;
+		background-repeat: no-repeat;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+		z-index: -10;
+	}
 	
 	#reunion_page h1.display-4 {
 		font-size: 325%;
@@ -2410,19 +2435,18 @@ table#contact_information_table th {
 	  top: 1%;
 	  left: 1%;
 	}
+	
 	ul#jgreunion_past_future_list > li {
 	  width: 92%;
 	  margin: 3% 4%;
 	  position: relative;
 	}
+	
 	ul#past_reunions {
 	  padding: 1% 3.2% 1%;
 	  width: inherit;
 	}
-	#reunion_history_pic {
-	  height: 10em;
-	  width: 10em;
-	}
+	
 	div#reunion_history {
 	  padding: 1.5% 6% 1%;
 	}
@@ -2454,16 +2478,20 @@ table#contact_information_table th {
 	.activities_content {
 	  min-height: 600px;
 	}
+	
 	.activities_content:nth-of-type(4) {
 	  background-size: 100% 70%;
 	  background-position: center bottom;
 	}
+	
 	.activities_content:nth-of-type(4) p {
 		padding: 0% 15%;
 	}
+	
 	#contact_content {
 	  padding: 1% 1%;
 	}
+	
 	div#contact_content p {
 	  margin: 4px;
 	  text-align: -webkit-center;
@@ -2910,11 +2938,13 @@ table#contact_information_table th {
 	div#errors_modal {
 	   width: 13%;
 	}
+	
 	button#takeLater_btn, #no_music {
 	  right: 7%;
 	  width: 40%;
 	  padding: 2% 0%;
 	}
+	
 	button#takeNow_btn, #yes_music {
 	  left: 7%;
 	  width: 40%;
@@ -2925,21 +2955,23 @@ table#contact_information_table th {
 	  right: 1%;
 	  bottom: 18%;
 	}
+	
 	button#admin_login_btn {
 	  font-size: 110%;
 	}
+	
 	#admin_form {
 	  width: 10%;
 	  right: 0.5%;
 	}
+	
 	div#reunion_history {
 	  padding: 1.5% 6% 1%;
 	  font-size: 150%;
 	}
+	
 	#reunion_descent {
 	  font-size: 140%;
-	}
-	#jackson_descent, #green_descent {
 	}
 	
 	#family_tree_pic {
