--- a/public/css/jgreunion.css
+++ b/public/css/jgreunion.css
@@ -50,42 +50,13 @@ div#allMembersPage::after {
 	 background-position: center center;
 }
 
-div#charlottePage::after {
-	content: "";
-	position: absolute;
-	background-image: url("../images/raleigh_skyline.jpg");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	z-index: -1;
-	opacity: 0.4;
-}
-.addDollarSign, .addSeparationComm {
-    position: relative;
+.table-wrapper-scroll-y {
+	display: block;
+	max-height: 200px;
+	overflow-y: auto;
+	-ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
-.addDollarSign input[type="number"] {
-	padding: 0.5% 0% 0.5% 3%;
-	width: 62% !important;
-}
-
-.addDollarSign::before {
-	content: "$";
-	position: absolute;
-	top: 24%;
-	left: 35.2%;
-}
-
-.addSeparationComm::after {
-	content: "Separate with comma";
-	position: absolute;
-	top: 8%;
-	right: 5%;
-	font-size: 80%;
-}
 #loginPage, #registerPage {
 	background: linear-gradient(#030502, #6b9d3e 43%, #000000 98%);
 }
