--- a/public/css/jgreunion.css
+++ b/public/css/jgreunion.css
@@ -657,14 +657,17 @@ h2#reg_form_header {
     border-bottom: solid 2px #004d64;
     color: white;
 }
+
 div#registration_div, div#login_div {
     border: solid 2px #004d64;
     border-radius: 5px;
     background-color: darkgray;
 }
+
 div#reg_form_input, div#login_form_input {
     margin: 0% 5% 2%;
 }
+
 div#login_form_input input.regInput {
     width: 100%;
     margin: 0.3% 0%;
@@ -672,8 +675,6 @@ div#login_form_input input.regInput {
 }
 div#reg_form_input {
     margin: 0% 20% 2%;
-}
-.costPC, .costPA, .costPY {
 }
 
 input#reg_form_btn, #login_submit_btn {
@@ -686,23 +687,7 @@ input#reg_form_btn, #login_submit_btn {
     background-color: #004d64;
     color: white;
 }
-input#reg_form_btn::after {
-	content: "Pass";
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	top: 0;
-}
-div#page_header {
-text-align: center;
-}
-div#page_header {
-    background: linear-gradient(90deg, rgb(55, 55, 55),black 15%, black 85%, rgb(55, 55, 55));
-    color: white;
-    padding: 0% 14%;
-    font-size: 200%;
-}
+
 #admin_form {
   display: none;
   position: absolute;
@@ -710,15 +695,12 @@ div#page_header {
   top: 20%;
   right: 2%;
 }
-#jgphilly_page_header {
-	background-color: black;
-	padding: 4% 0%;
-	font-family: 'Berkshire Swash', cursive;
-}
+
 
 div#modal_adminPage label {
 	font-size: 115%
 }
+
 #submit_form {
   border-radius: 10px;
   width: 50%;
@@ -734,40 +716,29 @@ div#modal_adminPage label {
 	position: relative;
 	font-family: 'Josefin Slab', serif;
 }
+
 h2#payments_header {
   color: green;
 }
-/*#form_information, #hotel_information, #activities_information, #suggestions, #payments, #contact_information
-{
-	width: 100%;
-}*/
+
 #hotel_information {
 	padding-bottom: 3%;
 }
-#hotel_content {
-	margin: 0% 5%;
-	border-radius: 10px;
-	padding: 2% 2%;
-	font-size: 175%;
-	opacity: 0.9;
-	min-height: 210px;
-	/* text-align: -webkit-center; */
-	/* text-align: center; */
-}
-div#hotel_content p {
-  margin: 2% 0%;
-  font-size: 80%;
-}
+
 dd#directions_link {
     text-decoration: underline;
     color: blue;
 }
+
 #hotel_pic {
-  float: left;
+  /*float: left;
   height: 210px;
   width: 210px;
-  margin-right: 3%;
+  margin-right: 3%; */
+  max-width: 100%;
+
 }
+
 #hotel_content button {
     background-color: #A1927A;
     border: outset 3px #637145;
@@ -885,27 +856,31 @@ div#electronic_payment_option p {
 div#electronic_payment_option p:last-of-type {
     padding: 0% 0%;
 }
+
 div#paper_payment_option p {
     margin: 3% 0%;
 }
+
 #checks_address {
     text-align: -webkit-center;
     text-align: center;
 }
+
 #checks_address span {
 	display:-webkit-inline-box-;
 	display:inline-block;
 	width: 100%;
 }
+
 div#paper_payment_option p.paymentsFinePrint {
 	margin: 0% 0%;
 }
-div#show_profiles {
-	
-width: 100%;
-	
-overflow: auto;
+
+div#show_profiles {	
+	width: 100%;
+	overflow: auto;
 }
+
 div#show_profiles .profilePreview {
     background-color: #66923e;
     margin: 1% 2.9% 1%;
@@ -922,55 +897,57 @@ div#show_profiles .profilePreview {
     display: -webkit-inline-box;
     display: inline-block;
 }
+
 #all_profiles_header {
     background: linear-gradient(#6b9d3e, #619a38, transparent 56%);
     color: white;
     padding: 1% 2%;
 }
-.profilePreviewHeader .profilePreviewPhoto,.profilePreviewHeader .profilePreviewNameLink {
-    /* float: left; */
-}
+
 .profilePreviewHeader .profilePreviewPhoto {
     max-width: 25%;
     margin: 1% 1%;
     position: absolute;
 }
+
 .profilePreviewNameLink {
     padding: 2% 0% 0%;
     max-width: 80%;
     margin: 0% 0% 0% 30%;
 }
+
 .profilePreviewNameLink h2 {
     text-align: -webkit-left;
     text-align: left;
 }
+
 a.userProfileLink {
     color: #a1cdf7;
 }
+
 .profilePreviewInfo {
     margin: 0% 2% 0% 30%;
     padding: 0% 0%;
 }
+
 .profilePreviewInfoP {
     margin: 1% 0%;
     font-size: 125%;
     color: whitesmoke;
 }
+
 div#show_profiles .profilePreview img {
     max-width: 165px;
     max-height: 165px;
     width: 165px;
     height: 165px;
 }
+
 div#registrationReminderMsg p {
     margin: 0 auto;
     padding: 0% 0% 7%;
     color: red;
     font-size: 125%;
-}
-
-#hotel_information {
-	font-size: 130%;
 }
 
 span#registrationLink, a#registrationLink {
@@ -2121,6 +2098,7 @@ table#contact_information_table th {
 
 /*Coverage between smaller screens*/
 @media only screen and (max-width:575px) {
+
 	.modal-dialog {
 		max-width: 500px; 
 	}
@@ -2414,15 +2392,13 @@ table#contact_information_table th {
 	  min-height: 400px;
 	  height: 400px;
 	}
-	#hotel_pic {
-	  height: 210px;
-	  width: 100%;
-	  margin: 0% 0% 5% 0%;
-	}
+	
+	#hotel_pic {}
 	
 	button#registrationFormBtn {
 		display: none;
 	}
+	
 	.activities_content {
 	  min-height: 600px;
 	}
@@ -2475,28 +2451,31 @@ table#contact_information_table th {
 	div#electronic_payment_option p:last-of-type {
 		padding: 1% 0% 25%;
 	}
+	
 	.activities_content ul {
 		padding: 0% 15%;
 	}
-	div#hotel_content dl {
-		margin: -4% 0% 0%;
-	}
+
 	div.directionOptions {
 		max-width: 98%;
 		min-width: 75%;
 		width: 98%;
 		padding: 0.5%;
 	}
+	
 	div#paper_payment_option p.paymentsFinePrint {
 		margin: 0% 0%;
 	}
+	
 	table#contact_information_table th {
 		text-align: -webkit-center;
 		text-align: center;
 	}
+	
 	button#submitRegistration {
 		right: 12%;
 	}
+	
 	div#errors_modal {
 		top: 16%;
 		width: 50%;
